use jekyll RSS feed generation plugin
use jekyll RSS feed generation instead of custom generation of the RSS feed.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 exclude:
   - _sass/bootstrap/
+plugins:
+  - jekyll-feed
+title: Wayfire blog
+description: The blog of the Wayfire wayland window manager
+author: Wayfire developers
